# audio-transcriber

./: .gitignore  CLAUDE.md  TAURI_PORT.md  package-lock.json  package.json  server.js
.github/workflows/: release.yml
public/: index.html  script.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: assemblyai.rs  errors.rs  lib.rs  licence.rs  main.rs  media.rs
